--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+body{
+    background-color: aquamarine;
+}
+.board-row{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.board-container{
+    margin: 20px;
+    box-shadow: 5px 10px 5px 10px rgb(124, 194, 202);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.heading{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: rgb(40, 81, 168);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.square{
+    border: 1px solid rgb(163, 224, 219);
+    height: 100px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
-.App-link {
-  color: #61dafb;
+.won{
+    font-size: 40px;
+    padding: 10px;
+    font-family:Arial, Helvetica, sans-serif;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+    border-style: none;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: rgb(103, 160, 160);
 }
